Bug 226095 - Korganizer crashes when closed
Summary: Korganizer crashes when closed
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-10 02:49 UTC by David Hubner
Modified: 2010-02-10 14:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Hubner 2010-02-10 02:49:59 UTC
Version:            (using KDE 4.4.0)
OS:                Linux
Installed from:    Archlinux Packages

Crashes when opening and then closing the application, happens every time. 

Backtrace ( no debug symbols, sorry ) 

Application: KOrganizer (korganizer), signal: Segmentation fault
[KCrash Handler]
#5  0x00007f0dd9732155 in KCal::CalFilter::~CalFilter() () from /usr/lib/libkcal.so.4
#6  0x00007f0dd96e6d7e in KCal::Calendar::~Calendar() () from /usr/lib/libkcal.so.4
#7  0x00007f0dd885aa55 in KOrg::StdCalendar::~StdCalendar() () from /usr/lib/libkorganizer_calendar.so.4
#8  0x00007f0dd885c297 in K3StaticDeleter<KOrg::StdCalendar>::destructObject() () from /usr/lib/libkorganizer_calendar.so.4
#9  0x00007f0dd3962c7c in K3StaticDeleterPrivate::deleteStaticDeleters() () from /usr/lib/libkde3support.so.4
#10 0x00007f0dd7223306 in qt_call_post_routines() () from /usr/lib/libQtCore.so.4
#11 0x00007f0dd76ee748 in QApplication::~QApplication() () from /usr/lib/libQtGui.so.4
#12 0x0000000000407ca4 in _start ()

Thanks
Comment 1 Sergio Martins 2010-02-10 13:58:30 UTC
Disable your filters before exiting while this is not fixed.

I'll take a look at it.
Comment 2 Sergio Martins 2010-02-10 14:43:54 UTC
SVN commit 1088299 by smartins:

When deleting all filters, don't delete the one currently set in KCal::Calendar because, as said in kcal/calendar.h, the calendar 
takes ownership of it and will free it in the destructor.

BUG: 226095
BUG: 222683

MERGE: trunk probably, didn't try to reproduce the crash yet.


 M  +15 -3     calendarview.cpp  
 M  +3 -0      calendarview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1088299