When deleting all filters, don't delete the one currently set in KCal::Calendar because, as said in kcal/calendar.h, the calendar takes ownership of it and will free it in the destructor.

BUG: 226095
BUG: 222683

MERGE: trunk probably, didn't try to reproduce the crash yet.

svn path=/branches/KDE/4.4/kdepim/; revision=1088299